rsrc/native/windows/raylib/include/raylib.h


#define LIGHTGRAY  CLITERAL(Color){ 200, 200, 200, 255 }   
#define GRAY       CLITERAL(Color){ 130, 130, 130, 255 }   
#define DARKGRAY   CLITERAL(Color){ 80, 80, 80, 255 }      
#define YELLOW     CLITERAL(Color){ 253, 249, 0, 255 }     
#define GOLD       CLITERAL(Color){ 255, 203, 0, 255 }     
#define ORANGE     CLITERAL(Color){ 255, 161, 0, 255 }     
#define PINK       CLITERAL(Color){ 255, 109, 194, 255 }   
#define RED        CLITERAL(Color){ 230, 41, 55, 255 }     
#define MAROON     CLITERAL(Color){ 190, 33, 55, 255 }     
#define GREEN      CLITERAL(Color){ 0, 228, 48, 255 }      
#define LIME       CLITERAL(Color){ 0, 158, 47, 255 }      
#define DARKGREEN  CLITERAL(Color){ 0, 117, 44, 255 }      
#define SKYBLUE    CLITERAL(Color){ 102, 191, 255, 255 }   
#define BLUE       CLITERAL(Color){ 0, 121, 241, 255 }     
#define DARKBLUE   CLITERAL(Color){ 0, 82, 172, 255 }      
#define PURPLE     CLITERAL(Color){ 200, 122, 255, 255 }   
#define VIOLET     CLITERAL(Color){ 135, 60, 190, 255 }    
#define DARKPURPLE CLITERAL(Color){ 112, 31, 126, 255 }    
#define BEIGE      CLITERAL(Color){ 211, 176, 131, 255 }   
#define BROWN      CLITERAL(Color){ 127, 106, 79, 255 }    
#define DARKBROWN  CLITERAL(Color){ 76, 63, 47, 255 }      
#define WHITE      CLITERAL(Color){ 255, 255, 255, 255 }   
#define BLACK      CLITERAL(Color){ 0, 0, 0, 255 }         
#define BLANK      CLITERAL(Color){ 0, 0, 0, 0 }           
#define MAGENTA    CLITERAL(Color){ 255, 0, 255, 255 }     
#define RAYWHITE   CLITERAL(Color){ 245, 245, 245, 255 }   
    typedef enum bool { false, true } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Vector4 {
    float x;                
    float y;                
    float z;                
    float w;                
} Vector4;
typedef Vector4 Quaternion;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef struct RenderTexture {
    unsigned int id;        
    Texture texture;        
    Texture depth;          
} RenderTexture;
typedef RenderTexture RenderTexture2D;
typedef struct NPatchInfo {
    Rectangle source;       
    int left;               
    int top;                
    int right;              
    int bottom;             
    int layout;             
} NPatchInfo;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} GlyphInfo;
typedef struct Font {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    Texture2D texture;      
    Rectangle *recs;        
    GlyphInfo *glyphs;      
} Font;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int projection;         
} Camera3D;
typedef Camera3D Camera;    
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    int frameCount;         
    BoneInfo *bones;        
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayCollision {
    bool hit;               
    float distance;         
    Vector3 point;          
    Vector3 normal;         
} RayCollision;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Wave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct Sound {
    AudioStream stream;         
    unsigned int frameCount;    
} Sound;
typedef struct Music {
    AudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} Music;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
typedef struct VrStereoConfig {
    Matrix projection[2];           
    Matrix viewOffset[2];           
    float leftLensCenter[2];        
    float rightLensCenter[2];       
    float leftScreenCenter[2];      
    float rightScreenCenter[2];     
    float scale[2];                 
    float scaleIn[2];               
} VrStereoConfig;
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void CloseWindow(void);                                     
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowMaximized(void);                               
RLAPI bool IsWindowFocused(void);                                 
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowState(unsigned int flag);                      
RLAPI void SetWindowState(unsigned int flags);                    
RLAPI void ClearWindowState(unsigned int flags);                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void MaximizeWindow(void);                                  
RLAPI void MinimizeWindow(void);                                  
RLAPI void RestoreWindow(void);                                   
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetCurrentMonitor(void);                                
RLAPI Vector2 GetMonitorPosition(int monitor);                    
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI Vector2 GetWindowPosition(void);                            
RLAPI Vector2 GetWindowScaleDPI(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI void SetClipboardText(const char *text);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void ShowCursor(void);                                      
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);      
RLAPI Matrix GetCameraMatrix(Camera camera);                      
RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera);  
RLAPI void SetTargetFPS(int fps);                                 
RLAPI int GetFPS(void);                                           
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI int GetRandomValue(int min, int max);                       
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI void SetConfigFlags(unsigned int flags);                    
RLAPI void TraceLog(int logLevel, const char *text, ...);         
RLAPI bool IsFileExtension(const char *fileName, const char *ext);
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetDirectoryPath(const char *filePath);         
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsFileDropped(void);                                   
RLAPI char **GetDroppedFiles(int *count);                         
RLAPI void ClearDroppedFiles(void);                               
RLAPI bool IsKeyPressed(int key);                             
RLAPI bool IsKeyDown(int key);                                
RLAPI bool IsKeyReleased(int key);                            
RLAPI bool IsKeyUp(int key);                                  
RLAPI void SetExitKey(int key);                               
RLAPI int GetKeyPressed(void);                                
RLAPI bool IsGamepadAvailable(int gamepad);                   
RLAPI const char *GetGamepadName(int gamepad);                
RLAPI bool IsGamepadButtonPressed(int gamepad, int button);   
RLAPI bool IsGamepadButtonDown(int gamepad, int button);      
RLAPI bool IsGamepadButtonReleased(int gamepad, int button);  
RLAPI bool IsGamepadButtonUp(int gamepad, int button);        
RLAPI int GetGamepadButtonPressed(void);                      
RLAPI int GetGamepadAxisCount(int gamepad);                   
RLAPI float GetGamepadAxisMovement(int gamepad, int axis);    
RLAPI bool IsMouseButtonPressed(int button);                  
RLAPI bool IsMouseButtonDown(int button);                     
RLAPI bool IsMouseButtonReleased(int button);                 
RLAPI bool IsMouseButtonUp(int button);                       
RLAPI int GetMouseX(void);                                    
RLAPI Color Fade(Color color, float alpha);                                 
RLAPI int ColorToInt(Color color);                                          
RLAPI Vector4 ColorNormalize(Color color);                                  
RLAPI Vector3 ColorToHSV(Color color);                                      
RLAPI Color GetColor(unsigned int hexValue);                                