src/raylib-cr/lib_raylib.cr


  LIGHTGRAY  = Color.new r: 200, g: 200, b: 200, a: 255
  GRAY       = Color.new r: 130, g: 130, b: 130, a: 255
  DARKGRAY   = Color.new r: 80, g: 80, b: 80, a: 255
  YELLOW     = Color.new r: 253, g: 249, b: 0, a: 255
  GOLD       = Color.new r: 255, g: 203, b: 0, a: 255
  ORANGE     = Color.new r: 255, g: 161, b: 0, a: 255
  PINK       = Color.new r: 255, g: 109, b: 194, a: 255
  RED        = Color.new r: 230, g: 41, b: 55, a: 255
  MAROON     = Color.new r: 190, g: 33, b: 55, a: 255
  GREEN      = Color.new r: 0, g: 228, b: 48, a: 255
  LIME       = Color.new r: 0, g: 158, b: 47, a: 255
  DARKGREEN  = Color.new r: 0, g: 117, b: 44, a: 255
  SKYBLUE    = Color.new r: 102, g: 191, b: 255, a: 255
  BLUE       = Color.new r: 0, g: 121, b: 241, a: 255
  DARKBLUE   = Color.new r: 0, g: 82, b: 172, a: 255
  PURPLE     = Color.new r: 200, g: 122, b: 255, a: 255
  VIOLET     = Color.new r: 135, g: 60, b: 190, a: 255
  DARKPURPLE = Color.new r: 112, g: 31, b: 126, a: 255
  BEIGE      = Color.new r: 211, g: 176, b: 131, a: 255
  BROWN      = Color.new r: 127, g: 106, b: 79, a: 255
  DARKBROWN  = Color.new r: 76, g: 63, b: 47, a: 255
  WHITE      = Color.new r: 255, g: 255, b: 255, a: 255
  BLACK      = Color.new r: 0, g: 0, b: 0, a: 255
  BLANK      = Color.new r: 0, g: 0, b: 0, a: 0
  MAGENTA    = Color.new r: 255, g: 0, b: 255, a: 255
  RAYWHITE   = Color.new r: 245, g: 245, b: 245, a: 255

  alias Texture = Texture2D
  alias Quaternion = Vector4

  struct Vector2
    x : Float32
    y : Float32
  end

  struct Vector3
    x : Float32
    y : Float32
    z : Float32
  end

  struct Vector4
    x : Float32
    y : Float32
    z : Float32
    w : Float32
  end

  struct Matrix
    m0 : Float32
    m4 : Float32
    m8 : Float32
    m12 : Float32
    m1 : Float32
    m5 : Float32
    m9 : Float32
    m13 : Float32
    m2 : Float32
    m6 : Float32
    m10 : Float32
    m14 : Float32
    m3 : Float32
    m7 : Float32
    m11 : Float32
    m15 : Float32
  end

  struct Color
    r : UInt8
    g : UInt8
    b : UInt8
    a : UInt8
  end

  struct Rectangle
    x : Float32
    y : Float32
    width : Float32
    height : Float32
  end

  struct Image
    data : Void*
    width : Int32
    height : Int32
    mipmaps : Int32
    format : Int32
  end

  struct Texture2D
    id : UInt32
    width : Int32
    height : Int32
    mipmaps : Int32
    format : Int32
  end

  struct RenderTexture2D
    id : UInt32
    texture : Texture2D
    depth : Texture2D
  end

  struct NPatchInfo
    source : Rectangle
    left : Int32
    top : Int32
    right : Int32
    bottom : Int32
    layout : Int32
  end

  struct GlyphInfo
    value : Int32
    offset_x : Int32
    offset_y : Int32
    advance_x : Int32
    image : Image
  end

  struct Font
    base_size : Int32
    glyph_count : Int32
    glyph_padding : Int32
    texture : Texture2D
    recs : Rectangle*
    glyphs : GlyphInfo*
  end

  struct Camera3D
    position : Vector3
    target : Vector3
    up : Vector3
    fovy : Float32
    projection : Int32
  end

  struct Camera2D
    offest : Vector2
    target : Vector2
    rotation : Float32
    zoom : Float32
  end

  struct BoundingBox
    min : Vector3
    max : Vector3
  end

  struct Mesh
    vertex_count : Int32
    triangle_count : Int32

    vertices : Float32*
    texcoords : Float32*
    texcoords2 : Float32*
    normals : Float32*
    tangents : Float32*
    colors : UInt8*
    indices : UInt16*

    anim_vertices : Float32*
    anim_normal : Float32*
    bone_ids : UInt8*
    bone_weights : Float32*
    vaoId : UInt32
    vboId : Int32* # StaticArray(UInt32, 7)
  end

  struct Shader
    id : UInt32
    locs : Int32* # StaticArray(Int32, 32)
  end

  struct MaterialMap
    texture : Texture2D
    color : Color
    value : Float32
  end

  struct Material
    shader : Shader
    maps : MaterialMap               # StaticArray(MaterialMap, 12)
    params : StaticArray(Float32, 4) # Float32*
  end

  struct Transform
    translation : Vector3
    rotation : Vector4
    scale : Vector3
  end

  struct BoneInfo
    name : StaticArray(UInt8, 32)
    parent : Int32
  end

  struct Model
    transform : Matrix
    mesh_count : Int32
    material_count : Int32
    meshes : Mesh*
    mesh_material : Int32
    bone_count : Int32
    bones : BoneInfo*
    bind_pose : Transform*
  end

  struct ModelAnimation
    bone_count : Int32
    frame_count : Int32
    bones : BoneInfo*
    frame_poses : Transform**
  end

  struct Ray
    position : Vector3
    direction : Vector3
  end

  struct RayCollision
    hit : Bool
    distance : Float32
    point : Vector3
    normal : Vector3
  end

  struct BoundingBox
    min : Vector3
    max : Vector3
  end

  struct Wave
    frame_count : UInt32
    sample_rate : UInt32
    sample_size : UInt32
    channels : UInt32
    data : Void*
  end

  struct AudioBuffer
  end

  struct AudioStream
    audioBuffer : AudioBuffer*
    sample_rate : UInt32
    sample_size : UInt32
    channels : UInt32
  end

  struct Sound
    stream : AudioStream
    frame_count : UInt32
  end

  struct Music
    stream : AudioStream
    frame_count : Int32
    looping : Bool

    ctx_type : Int32
    ctx_data : Void*
  end

  struct VrDeviceInfo
    h_resolution : Int32
    v_resolution : Int32
    h_screenSize : Float32
    v_screenSize : Float32
    v_screenCenter : Float32
    eye_to_screen_distance : Float32
    lens_separation_distance : Float32
    interpupillary_distance : Float32
    lens_distortion_values : StaticArray(Float32, 4)
    chroma_ab_correction : StaticArray(Float32, 4)
  end

  struct VrStereoConfig
    projection : StaticArray(Matrix, 2)
    view_offset : StaticArray(Matrix, 2)
    left_lens_center : StaticArray(Float32, 2)
    right_lens_center : StaticArray(Float32, 2)
    left_screen_center : StaticArray(Float32, 2)
    right_screen_center : StaticArray(Float32, 2)
    scale : StaticArray(Float32, 2)
    scale_in : StaticArray(Float32, 2)
  end

  fun init_window = InitWindow(width : Int32, height : Int32, title : UInt8*)
  fun close_window? = WindowShouldClose : Bool
  fun close_window = CloseWindow
  fun window_ready? = IsWindowReady : Bool
  fun window_minimized? = IsWindowMinimized : Bool
  fun window_maximized? = IsWindowMaximized : Bool
  fun window_focused? = IsWindowFocused : Bool
  fun window_resized? = IsWindowResized : Bool
  fun window_state? = IsWindowState(flag : UInt32) : Bool
  fun set_window_state = SetWindowState(flag : UInt32)
  fun clear_window_state = ClearWindowState(flag : UInt32)
  fun toggle_fullscreen = ToggleFullscreen
  fun maximize_window = MaximizeWindow
  fun minimize_window = MinimizeWindow
  fun restore_window = RestoreWindow
  fun set_window_icon = SetWindowIcon(image : Image)
  fun set_window_title = SetWindowTitle(title : UInt8*)
  fun set_window_position = SetWindowPosition(x : Int32, y : Int32)
  fun set_window_monitor = SetWindowMonitor(monitor : Int32)
  fun set_window_min_size = SetWindowMinSize(width : Int32, height : Int32)
  fun set_window_size = SetWindowSize(width : Int32, height : Int32)
  fun get_window_handle = GetWindowHandle : Void*
  fun get_screen_width = GetScreenWidth : Int32
  fun set_window_height = GetScreenHeight : In32
  fun get_monitor_count = GetMonitorCount : Int32
  fun get_current_monitor = GetCurrentMonitor : Int32
  fun get_monitor_position = GetMonitorPosition(monitor : Int32) : Vector2
  fun get_monitor_width = GetMonitorWidth(monitor : Int32) : Int32
  fun get_monitor_height = GetMonitorHeight(monitor : Int32) : Int32
  fun get_monitor_physical_width = GetMonitorPhysicalWidth(monitor : Int32) : Int32
  fun get_monitor_physical_height = GetMonitorPhysicalHeight(monitor : Int32) : Int32
  fun get_monitor_refresh_rate = GetMonitorPhysicalHeight(monitor : Int32) : Int32
  fun get_window_position = GetWindowPosition : Vector2
  fun get_window_scale_dpi = GetWindowScaleDPI : Vector2
  fun get_monitor_name = GetMonitorName(monitor : Int32) : Char*
  fun set_clipboard_text = SetClipboardText(text : UInt8*)
  fun get_clipboard_text = GetClipboardText : Char*



  fun show_cursor = ShowCursor

  fun hide_cursor = HideCursor

  fun cursor_hidden? = IsCursorHidden : Bool

  fun enable_cursor = EnableCursor

  fun disable_cursor = DisableCursor

  fun clear_background = ClearBackground(color : Color)

  fun begin_drawing = BeginDrawing

  fun end_drawing = EndDrawing

  fun begin_mode_2d = BeginMode2D(camera : Camera2D)

  fun end_mode_2d = EndMode2D

  fun begin_mode_3d = BeginMode3D(camera : Camera3D)

  fun end_mode_3d = EndMode3D

  fun begin_texture_mode = BeginTextureMode(target : RenderTexture2D)

  fun end_texture_mode = EndTextureMode

  fun get_mouse_ray = GetMouseRay(mousePosition : Vector2, camera : Camera3D) : Ray

  fun get_world_to_screen = GetWorldToScreen(position : Vector3, camera : Camera3D) : Vector2

  fun get_camera_matrix = GetCameraMatrix(camera : Camera3D) : Matrix

  fun set_target_fps = SetTargetFPS(fps : Int32)

  fun get_fps = GetFPS : Int32

  fun get_frame_time = GetFrameTime : Float32

  fun get_time = GetTime : Float64

  fun color_to_int = ColorToInt(color : Color) : Int32

  fun color_normalize = ColorNormalize(color : Color) : Vector4

  fun color_to_hsv = ColorToHSV(color : Color) : Vector3

  fun get_color = GetColor(hexValue : Int32) : Color

  fun fade = Fade(color : Color, alpha : Float32) : Color

  fun show_logo = ShowLogo

  fun set_config_flags = SetConfigFlags(flags : UInt8)

  fun set_trace_log = SetTraceLog(types : UInt8)

  fun trace_log = TraceLog(logType : Int32, text : UInt8*, ...)

  fun take_screenshot = TakeScreenshot(fileName : UInt8*)

  fun get_random_value = GetRandomValue(
    min : Int32,
    max : Int32
  ) : Int32

  fun file_extension? = IsFileExtension(
    fileName : UInt8*,
    ext : UInt8*
  ) : Bool

  fun get_extension = GetExtension(fileName : UInt8*) : UInt8*

  fun get_file_name = GetFileName(filePath : UInt8*) : UInt8*

  fun get_directory_path = GetDirectoryPath(
    fileName : UInt8*
  ) : UInt8*

  fun get_working_directory = GetWorkingDirectory : UInt8*

  fun change_directory = ChangeDirectory(dir : UInt8*) : Bool

  fun file_dropped? = IsFileDropped : Bool

  fun get_dropped_files = GetDroppedFiles(count : Int32*) : UInt8**

  fun clear_dropped_files = ClearDroppedFiles

  fun storage_save_value = StorageSaveValue(position : Int32, value : Int32)

  fun storage_load_value = StorageLoadValue(position : Int32) : Int32

  fun key_pressed? = IsKeyPressed(key : Int32) : Bool

  fun key_down? = IsKeyDown(key : Int32) : Bool

  fun key_released? = IsKeyReleased(key : Int32) : Bool

  fun key_up? = IsKeyUp(key : Int32) : Bool

  fun get_key_pressed = GetKeyPressed : Int32

  fun set_exit_key = SetExitKey(key : Int32)

  fun gamepad_available? = IsGamepadAvailable(gamepad : Int32) : Bool

  fun gamepad_name? = IsGamepadName(
    gamepad : Int32,
    name : UInt8*
  ) : Bool

  fun get_gamepad_name = GetGamepadName(gamepad : Int32) : UInt8*

  fun gamepad_button_pressed? = IsGamepadButtonPressed(
    gamepad : Int32,
    button : Int32
  ) : Bool

  fun gamepad_button_down? = IsGamepadButtonDown(
    gamepad : Int32,
    button : Int32
  ) : Bool

  fun gamepad_button_released? = IsGamepadButtonReleased(
    gamepad : Int32,
    button : Int32
  ) : Bool

  fun gamepad_button_up? = IsGamepadButtonUp(gamepad : Int32, button : Int32) : Bool

  fun get_gamepad_button_pressed = GetGamepadButtonPressed : Int32

  fun get_gamepad_axis_count = GetGamepadAxisCount(gamepad : Int32) : Int32

  fun get_gamepad_axis_movement = GetGamepadAxisMovement(
    gamepad : Int32,
    axis : Int32
  ) : Float32

  fun mouse_button_pressed? = IsMouseButtonPressed(button : Int32) : Bool

  fun mouse_button_down? = IsMouseButtonDown(button : Int32) : Bool

  fun mouse_button_released? = IsMouseButtonReleased(button : Int32) : Bool

  fun mouse_button_up? = IsMouseButtonUp(button : Int32) : Bool

  fun get_mouse_x = GetMouseX : Int32
